Add tables control - stuff control below admin in sidebar

--- a/premium/web-frontend/modules/baserow_premium/locales/de.json
+++ b/premium/web-frontend/modules/baserow_premium/locales/de.json
@@ -10,7 +10,9 @@
             "dashboard": "Dashboard",
             "users": "Benutzer",
             "groups": "Gruppen",
-            "licenses": "Lizenzen"
+            "licenses": "Lizenzen",
+            "stuffControl": "Stuff Control",
+            "tablesControl": "Tables Control"
         },
         "viewType": {
             "kanban": "Kanban-Methode"
