--- a/premium/web-frontend/modules/baserow_premium/locales/en.json
+++ b/premium/web-frontend/modules/baserow_premium/locales/en.json
@@ -10,7 +10,9 @@
             "dashboard": "Dashboard",
             "users": "Users",
             "groups": "Groups",
-            "licenses": "Licenses"
+            "licenses": "Licenses",
+            "stuffControl": "Stuff Control",
+            "tablesControl": "Tables Control"
         },
         "viewType": {
             "kanban": "Kanban"
