--- a/premium/web-frontend/modules/baserow_premium/locales/fr.json
+++ b/premium/web-frontend/modules/baserow_premium/locales/fr.json
@@ -10,7 +10,9 @@
             "dashboard": "Statistiques",
             "users": "Utilisateurs",
             "groups": "Groupes",
-            "licenses": "Licences"
+            "licenses": "Licences",
+            "stuffControl": "Stuff Control",
+            "tablesControl": "Tables Control"
         },
         "viewType": {
             "kanban": "Kanban"
