--- a/premium/web-frontend/modules/baserow_premium/locales/it.json
+++ b/premium/web-frontend/modules/baserow_premium/locales/it.json
@@ -10,7 +10,9 @@
             "dashboard": "Dashboard",
             "users": "Utenti",
             "groups": "Gruppi",
-            "licenses": "Licenze"
+            "licenses": "Licenze",
+            "stuffControl": "Stuff Control",
+            "tablesControl": "Tables Control"
         },
         "viewType": {
             "kanban": "Kanban"
