--- a/premium/web-frontend/modules/baserow_premium/locales/pt_BR.json
+++ b/premium/web-frontend/modules/baserow_premium/locales/pt_BR.json
@@ -10,7 +10,9 @@
             "dashboard": "Painel",
             "users": "Usuários",
             "groups": "Grupos",
-            "licenses": "Licenças"
+            "licenses": "Licenças",
+            "stuffControl": "Stuff Control",
+            "tablesControl": "Tables Control"
         },
         "viewType": {
             "kanban": "Quadro"
