add create New Row

--- a/premium/web-frontend/modules/baserow_premium/locales/en.json
+++ b/premium/web-frontend/modules/baserow_premium/locales/en.json
@@ -29,7 +29,8 @@
         "comment": "Comment"
     },
     "rowComment": {
-        "you": "You"
+        "you": "You",
+        "rowCreated":"New row Created"
     },
     "registerLicenseModal": {
         "titleRegisterLicense": "Register a license",
