--- a/modules/database/locales/en.json
+++ b/modules/database/locales/en.json
@@ -409,6 +409,7 @@
     "viewDecorator": {
         "decorator": "Color | 1 Color | {count} Colors"
     },
+    "refresh":"Refresh",
     "viewRotateSlugModal": {
         "title": "Refresh URL",
         "refreshWarning": "Are you sure that you want to refresh the URL of {viewName}? After refreshing, a new URL will be generated and it will not be possible to access the {viewTypeSharingLinkName} via the old URL. Everyone that you have shared the URL with, won't be able to access the {viewTypeSharingLinkName}.",
