--- a/premium/web-frontend/modules/baserow_premium/locales/en.json
+++ b/premium/web-frontend/modules/baserow_premium/locales/en.json
@@ -30,7 +30,7 @@
     },
     "rowComment": {
         "you": "You",
-        "rowCreated":"New row Created"
+        "rowCreated":"New row Created With"
     },
     "registerLicenseModal": {
         "titleRegisterLicense": "Register a license",
